2005-03-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Issue a warning rather than to cause an error in the
	case where the shell command doesn't seem to be usable.

	* attic/addpath.el: Make it work with old Emacsen even if cl is
	not loaded; load custom, bind defcustom'ed variables and make the
	locate-library function run quietly for Emacs 19.

	* w3m-ccl.el: Load w3m-om instead of autoloading it for charset-id.

	* w3m-util.el: Load cl independently when compiling.

2005-03-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Check whether the shell command can be used.

	* attic/addpath.el: Ditto; add early-package-load-path to
	load-path for XEmacs 21.5.

	* shimbun/nnshimbun.el: Load gnus-bcklg safely (see the comment).

2005-03-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-favicon.el: Add autoload of `w3m-url-readable-string'.

2005-03-17  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m.el (w3m-check-header-tags): Check abnormal `base' url.

2005-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Try to
	fetch the article for that day if it failed for the editorial
	group and the tenjin group; remove the science group section.

	* shimbun/sb-tcup.el (shimbun-tcup-group-alist): Remove the
	time-lag parameter.
	(shimbun-get-headers): Adjust date for articles posted up in the
	level-one boards in which the clock has been advanced for 9 hours.

2005-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Add early-package-load-path to load-path for XEmacs
	21.5.

	* shimbun/sb-asahi.el: Rewrite to follow the change of the site.
	(shimbun-asahi-make-regexp): New function.
	(shimbun-asahi-group-table): Use it; remove the groups borderless,
	kansai-special, nankyoku-people and whitemail; add the groups
	book, business.column, car, car.italycolumn, car.motorsports,
	car.newcar, car.newcarbywebcg, culture.column, digital,
	digital.apc, digital.bcnnews, digital.column01, digital.hotwired,